--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,14 +4,17 @@ services:
     build: .
     command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
     volumes:
-      - .:/i_am_here:cached
+      - .:/insta_clone:cached
       - bundle:/usr/local/bundle
     ports:
       - 3000:3000
     depends_on:
       - db
+      - chrome
     stdin_open: true
     tty: true
+    environment:
+      SELENIUM_DRIVER_URL: http://chrome:4444/wd/hub
   db:
     image: mysql:5.7.33
     environment:
@@ -20,7 +23,10 @@ services:
       - 3306:3306
     volumes:
       - mysql_data:/var/lib/mysql
-
+  chrome:
+    image: selenium/standalone-chrome-debug:latest
+    ports:
+      - 4444:4444
 volumes:
   bundle:
   mysql_data:
