--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build: .
     command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
     volumes:
-      - .:/insta_clone:cached
+      - .:/i_am_here:cached
       - bundle:/usr/local/bundle
     ports:
       - 3000:3000
